syntax = "proto3";

package message;
option java_multiple_files = true;


message MessageRequest {
  oneof request_type {
    PartialRequest partial_request = 1;
    FullRequest full_request = 2;
  }
}

message PartialRequest {
  int64 from_user_id = 1;
}

message FullRequest {
  int64 from_user_id = 1;
  int32 chat_id = 2;
  string content = 3;
}


message MessageResponse {
  int64 from_user_id = 1;
  string from_user_name = 2;
  int32 chat_id = 3;
  int64 timestamp = 4;
  string content = 5;
}


service MessageService {
    rpc messageStream (stream MessageRequest) returns (stream MessageResponse) {};
}

